css opdracht1 les 2 afgerond 8-12 revision 2

--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -11,10 +11,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="https://ciaotutti.nl/about">About</a></li>
-                    <li><a href="https://ciaotutti.nl/articles">Articles</a></li>
-                    <li><a href="https://ciaotutti.nl/places">Places</a></li>
-                    <li><a href="https://ciaotutti.nl/contact">Get in Touch</a></li>
+                    <li><a class="nav-links" href="https://ciaotutti.nl/about">About</a></li>
+                    <li><a class="nav-links" href="https://ciaotutti.nl/articles">Articles</a></li>
+                    <li><a class="nav-links" href="https://ciaotutti.nl/places">Places</a></li>
+                    <li><a class="nav-links" href="https://ciaotutti.nl/contact">Get in Touch</a></li>
                 </ul>
             </nav>
         </header>
